fixes hero spacing

--- a/dev/sass/globals/partials/portfolio.scss
+++ b/dev/sass/globals/partials/portfolio.scss
@@ -5,10 +5,6 @@
 
 .hero.hero2 {
 	height: 20px;
-
-	@include media($max-width: 600px){
-		margin-bottom: 60px;
-	}
 }
 
 .logo-sub {
