--- a/dev/sass/media.scss
+++ b/dev/sass/media.scss
@@ -246,10 +246,6 @@
 	.menu {
 		padding: 30px 0px 120px 0px;
 	}
-
-	.portfolio-area {
-    	margin-top: 50px;
-	}
 }
 
 
@@ -328,7 +324,8 @@
 	}
 
 	.menu {
-		padding: 30px 0px 90px 0px;
+		padding-bottom: 0;
+		margin-bottom: 80px;
 	}
 }
 
